# django-appsearch

./: .coveragerc  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: main.yml
appsearch/: __init__.py  forms.py  models.py  ormutils.py  registry.py  tests.py  urls.py  utils.py  views.py
appsearch/static/js/: jquery.appsearch.js  jquery.appsearch.min.js
appsearch/templates/appsearch/: appsearch.html  constraint.html  default_form.html  menu.html  results_list.html  search_form.html
demo_app/: manage.py
demo_app/company/: admin.py  apps.py  models.py  search.py
demo_app/company/fixtures/: companies.json
demo_app/company/migrations/: 0001_initial.py
demo_app/demo_app/: settings.py  settings_test.py  urls.py  wsgi.py
demo_app/demo_app/templates/: base.html
demo_app/demo_app/templates/appsearch/: search.html
demo_app/demo_app/templates/registration/: login.html
demo_app/users/: admin.py  apps.py  forms.py  models.py  search.py  views.py
demo_app/users/fixtures/: users.json
demo_app/users/migrations/: 0001_initial.py
demo_app/users/static/js/: formset.min.js
